HUE-6077 [frontend] Added breadcrumbs to LESS
(cherry picked from commit bf8116e3643f9862b10f277d0f16e0ec8682da92)

--- a/apps/filebrowser/src/filebrowser/static/filebrowser/less/listdir_components.less
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/less/listdir_components.less
@@ -19,7 +19,7 @@
   padding: 14px;
 }
 
-.fileChooserModal .hueBreadcrumb {
+.fileChooserModal .hue-breadcrumbs {
   margin: 0 0 18px !important;
 }
 
