--- a/apps/metastore/src/metastore/static/metastore/less/metastore.less
+++ b/apps/metastore/src/metastore/static/metastore/less/metastore.less
@@ -19,19 +19,19 @@
 @import (reference) "cui/colors.less";
 @import (reference) "hue-mixins.less";
 
-.hueBreadcrumbBar {
+.hue-breadcrumbs-bar {
   padding: 0;
 }
 
-.hueBreadcrumbBar li {
+.hue-breadcrumbs-bar li {
   padding: 12px;
 }
 
-.hueBreadcrumbBar li:first-child {
+.hue-breadcrumbs-bar li:first-child {
   padding-left: 0;
 }
 
-.hueBreadcrumbBar a {
+.hue-breadcrumbs-bar a {
   color: @hue-primary-color-dark !important;
   display: inline !important;
 }
