--- a/desktop/core/src/desktop/static/desktop/less/components/hue-filechooser.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-filechooser.less
@@ -55,6 +55,6 @@
   padding-left: 4px!important;
 }
 
-.filechooser-tree .hueBreadcrumb > li:last-child > a {
+.filechooser-tree .hue-breadcrumbs > li:last-child > a {
   color: @cui-gray-800;
 }
