--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -32,6 +32,7 @@
 @import "components/hue-scrollbar.less";
 @import "components/hue-query-builder.less";
 @import "components/hue-qq-upload.less";
+@import "components/hue-breadcrumbs.less";
 @import "hue-helpers.less";
 
 .app-header {
