HUE-6077 [frontend] The filechooser actions should be on the same line in Hue 4

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-filechooser.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-filechooser.less
@@ -58,3 +58,10 @@
 .filechooser-tree .hue-breadcrumbs > li:last-child > a {
   color: @cui-gray-800;
 }
+
+.fileChooserActionUploader {
+  float: left;
+  margin-top: 10px;
+  margin-right: 4px;
+}
+
