HUE-6077 [frontend] Hide IE reveal password icon

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -35,6 +35,10 @@
 @import "components/hue-breadcrumbs.less";
 @import "hue-helpers.less";
 
+input[type='password']::-ms-reveal {
+  display: none;
+}
+
 .app-header {
   font-size: 20px;
   padding-top: 13px;
