--- a/desktop/core/src/desktop/static/desktop/less/login.less
+++ b/desktop/core/src/desktop/static/desktop/less/login.less
@@ -136,6 +136,10 @@
   color: #CCD1D9 !important;
 }
 
+input[type='password']::-ms-reveal {
+  display: none;
+}
+
 .tooltip {
   z-index: 10000;
 }
