HUE-6077 [frontend] Converted colors of breadcrumbs to CUI

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-breadcrumbs.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-breadcrumbs.less
@@ -23,18 +23,18 @@
     display: inline-block;
   }
   .divider {
-    color: #999999;
+    color: @cui-gray-600;
     padding: 0 5px;
   }
   .active a {
-    color: #333333;
+    color: @cui-gray-800;
   }
   a.nounderline:hover {
     text-decoration: none;
   }
   & > li:last-child > a {
     font-weight: bold;
-    color: #333333;
+    color: @cui-gray-800;
   }
   & > li:last-child > span {
     display: none;
