HUE-6077 [frontend] Unified Hue dark blue to cui-blue-700

--- a/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
+++ b/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
@@ -16,6 +16,8 @@
  limitations under the License.
 */
 
+@import (reference) "hue-mixins.less";
+
 .jobbrowser-components {
   .content-panel-inner {
     padding: 10px;
@@ -39,7 +41,7 @@
   }
 
   .hue-breadcrumbs-bar a {
-    color: #338BB8 !important;
+    color: @hue-primary-color-dark !important;
     display: inline !important;
   }
 
