--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/admin.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/admin.less
@@ -15,6 +15,9 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 */
+
+@import (reference) "hue-mixins.less";
+
 .dashboard-admin {
   .search-bar {
     background-color: #fafafa;
@@ -32,7 +35,7 @@
 
   .search-bar h4 {
     font-size: 20px !important;
-    color: #338BB8 !important;
+    color: @hue-primary-color-dark !important;
     padding: 0 !important;
     margin-top: 4px !important;
     margin-left: 20px;
