--- a/apps/filebrowser/src/filebrowser/static/filebrowser/less/listdir_components.less
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/less/listdir_components.less
@@ -1,3 +1,23 @@
+/*
+ Licensed to Cloudera, Inc. under one
+ or more contributor license agreements.  See the NOTICE file
+ distributed with this work for additional information
+ regarding copyright ownership.  Cloudera, Inc. licenses this file
+ to you under the Apache License, Version 2.0 (the
+ "License"); you may not use this file except in compliance
+ with the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+*/
+
+@import (reference) "hue-mixins.less";
+
 .fixed {
   position: fixed;
   top: 40px;
@@ -100,7 +120,7 @@
 
 #jHueHdfsAutocomplete ul li:hover,  #jHueHdfsAutocomplete ul li.active {
   color: #FFFFFF;
-  background: #338BB8;
+  background: @hue-primary-color-dark;
 }
 
 #jHueHdfsAutocomplete .popover-content {
@@ -114,7 +134,7 @@
 }
 
 .history:hover {
-  border-bottom: 2px solid #338bb8;
+  border-bottom: 2px solid @hue-primary-color-dark;
 }
 
 .history a {
@@ -203,8 +223,8 @@
 
 .drag-hover {
   background: #e5e5e5;
-  border-left: 3px solid #338bb8;
-  border-right: 3px solid #338bb8;
+  border-left: 3px solid @hue-primary-color-dark;
+  border-right: 3px solid @hue-primary-color-dark;
 }
 
 .qq-upload-drop-area {
