--- a/apps/metastore/src/metastore/static/metastore/less/metastore.less
+++ b/apps/metastore/src/metastore/static/metastore/less/metastore.less
@@ -16,7 +16,7 @@
  limitations under the License.
 */
 
-@import (reference) "cui/colors.less";
+@import (reference) "hue-mixins.less";
 @import (reference) "hue-mixins.less";
 
 .hue-breadcrumbs-bar {
