--- a/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
@@ -25,7 +25,7 @@
 
 */
 
-@hue-primary-color-dark: #338BB8;
+@hue-primary-color-dark: @cui-blue-700;
 @hue-primary-color-light: #DBE8F1;
 @hue-trunk: #A585B9;
 
