HUE-6077 [frontend] Create button improvements

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -76,7 +76,7 @@ body {
 }
 
 .top-nav-left {
-  .flex(0 0 300px);
+  .flex(0 0 350px);
 }
 
 .top-nav-middle {
@@ -86,6 +86,16 @@ body {
 
 .top-nav-right {
   .flex(0 0 300px);
+}
+
+.top-nav-left .btn-group {
+  float: right;
+}
+
+.hue-main-create-dropdown .hi {
+  // To align with fa-icons
+  margin-left: 1px;
+  margin-right: 2px;
 }
 
 .jobs-panel {
