HUE-6077 [frontend] Restyled Hue 3 top menu hovers
(cherry picked from commit 4456c290d03bb73ec29d669de1ab389c2c5449cb)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -518,6 +518,15 @@ a#advanced-btn:hover {
   padding-right: 8px;
 }
 
+.navigator .dropdown-menu > li > a:hover > .fa {
+  color: #FFFFFF;
+}
+
+.navigator .dropdown-menu > li > a:hover > img {
+  -webkit-filter: brightness(100);
+  filter: brightness(100);
+}
+
 .navigator .dropdown-menu > li > a {
   padding-left: 5px;
   padding-right: 30px;
