HUE-6077 [frontend] Override the font weight of form labels

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -64,3 +64,7 @@
 .nav-tabs > li > a {
   border-bottom-width: 2px!important;
 }
+
+.form-inline label, .form-horizontal label, .form-vertical label, .form-inline .control-label, .form-horizontal .control-label, .form-vertical .control-label {
+  font-weight: normal!important;
+}
