--- a/desktop/core/src/desktop/static/desktop/less/components/hue-selector.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-selector.less
@@ -21,56 +21,51 @@
   padding: 0;
   margin: 0;
   width: 300px;
+  label {
+    float: none;
+    padding-left: 4px;
+    input[type=checkbox] {
+      display: inline;
+      margin-top: -2px;
+      margin-right: 6px;
+    }
+  }
+  ul, li {
+    margin: 0;
+    padding: 0;
+  }
+  ul {
+    padding: 4px;
+    list-style: none;
+  }
+  li.selectorDivider {
+    border-bottom: 1px solid @cui-gray-100;
+    padding: 4px;
+    color: @hue-primary-color-dark;
+  }
 }
 
 .jHueSelectorHeader {
   background-color: @cui-gray-050;
   padding: 4px;
-}
-
-.jHueSelector label {
-  float: none;
-  padding-left: 4px;
-}
-
-.jHueSelector label input[type=checkbox] {
-  display: inline;
-  margin-top: -2px;
-  margin-right: 6px;
-}
-
-.jHueSelectorHeader input[type=text] {
-  position: absolute;
-  margin-left: 180px;
-  width: 100px;
-  height: 20px;
-  min-height: 20px;
-  border: 1px solid @cui-gray-400;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  color: @cui-gray-800;
-  font-size: 10px;
-  padding-left: 4px;
+  input[type=text] {
+    position: absolute;
+    margin-left: 180px;
+    width: 100px;
+    height: 20px;
+    min-height: 20px;
+    border: 1px solid @cui-gray-400;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    color: @cui-gray-800;
+    font-size: 10px;
+    padding: 0;
+    padding-left: 8px;
+  }
 }
 
 .jHueSelectorBody {
   height: 150px;
   overflow: auto;
-}
-
-.jHueSelector ul, li {
-  margin: 0;
-  padding: 0;
-}
-
-.jHueSelector ul {
-  padding: 4px;
-  list-style: none;
-}
-
-.jHueSelector li.selectorDivider {
-  border-bottom: 1px solid @cui-gray-100;
-  padding: 4px;
-  color: @hue-primary-color-dark;
 }
