HUE-6077 [frontend] Add top border to Hue 4
(cherry picked from commit 4ac2b89958dd0ea160f4d7e96a8ab2a61be72ea7)

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -49,6 +49,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  border-top: 3px solid @hue-primary-color-dark;
 }
 
 .content-wrapper {
