--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -32,6 +32,9 @@
   http_host=0.0.0.0
   http_port=8000
 
+  # A comma-separated list of available Hue load balancers
+  ## hue_load_balancer=
+
   # Time zone name
   time_zone=America/Los_Angeles
 
