HUE-6077 [frontend] Fixed styles for search dashboards

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -184,3 +184,8 @@ input[type='password']::-ms-reveal {
   margin-left: -1px;
   margin-top: -1px;
 }
+
+.card {
+  background-color: @cui-white;
+  border: 1px solid @cui-gray-100;
+}
