--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
@@ -45,6 +45,11 @@
     z-index: 1010;
   }
 
+  .search-bar .app-header {
+    padding-top: 5px;
+    margin-right: 15px;
+  }
+
   .search-bar form, .search-bar form select {
     margin-bottom: 0;
   }
