--- a/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
@@ -27,7 +27,7 @@
 
 @hue-primary-color-dark: @cui-blue-700;
 @hue-primary-color-light: #DBE8F1;
-@hue-trunk: #A585B9;
+@hue-trunk: @cui-purple-300;
 
 @hue-disabled-color: @cui-gray-100;
 @hue-error-color: @cui-red-400;
