--- a/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
+++ b/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
@@ -98,6 +98,7 @@
     z-index: 11;
     overflow-x: auto;
     border: 1px solid #d8d8d8 !important;
+    min-height: 40px;
   }
 
   .card-widget h2, .card-widget .card-body {
