HUE-6177 [frontend] Fix the hover colour on the main menu items

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -48,7 +48,7 @@ input[type='password']::-ms-reveal {
 }
 
 .svg-app-icon {
-  fill: @hue-primary-color-dark;
+  fill: currentColor;
   height: 24px !important; //conflicts with nv.d3.css
   width: 24px !important; //conflicts with nv.d3.css
   display: inline-block !important; //conflicts with nv.d3.css
