--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -190,3 +190,17 @@
 .vertical-full.container-fluid {
   padding-top: 0;
 }
+
+.dropdown-menu > li > a > svg {
+  color: @hue-primary-color-dark;
+}
+.dropdown-menu > li.active > a > svg,
+.dropdown-menu > li > a:hover > svg,
+.dropdown-menu > li > a:focus > svg,
+.dropdown-menu > li > a:active > svg {
+  color: #FFF !important;
+}
+
+.dropdown-menu .svg-app-icon {
+  margin-right: 4px;
+}
