HUE-6077 [frontend] More padding for the create button
(cherry picked from commit ec925a2abe115ed4a461408408f1e7ced6f192f4)

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -98,6 +98,11 @@ body {
   margin-right: 2px;
 }
 
+.hue-main-create-btn {
+  padding-left: 26px;
+  padding-right: 26px;
+}
+
 .jobs-panel {
   position: fixed;
   z-index: 2999;
@@ -297,7 +302,7 @@ body {
 .resize-bar {
   position: absolute;
   height: 100%;
-  width: 2px;
+  width: 1px;
   background-color: @cui-gray-300;
 }
 
