--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -42,16 +42,17 @@
   margin-top: 16px;
   border-bottom: 1px solid @cui-default-border-color;
   padding-left: 14px;
-}
-
-.right-panel-tabs > li > a {
-  font-size: 13px;
-  padding: 6px 5px 8px 5px;
-  margin-bottom: 0;
-}
-
-.right-panel-tabs > li.active > a {
-  padding: 6px 5px 8px 5px;
+  text-align: center;
+  & > li {
+    & > a {
+      font-size: 13px;
+      padding: 6px 5px 8px 5px;
+      margin-bottom: 0;
+    }
+  }
+  & > li.active > a {
+    padding: 6px 5px 8px 5px;
+  }
 }
 
 .right-panel-tab-content {
