HUE-6077 [frontend] Add a message to the login page

--- a/desktop/core/src/desktop/static/desktop/less/login.less
+++ b/desktop/core/src/desktop/static/desktop/less/login.less
@@ -50,6 +50,11 @@
     margin-top: 35px;
     margin-bottom: 35px;
   }
+  h3 {
+    color: @hue-primary-color-dark;
+    margin-bottom: 25px;
+    text-align: center;
+  }
   .empty-logo {
     background-color: @cui-white;
     width: 70px;
