HUE-6077 [frontend] Removed horizontal scrolling from Oozie

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -795,6 +795,7 @@ a:visited {
 /* oozie workflow */
 #oozie_workflowComponents .card-toolbar {
   position: static;
+  width: auto;
 }
 
 .tooltip, .ui-autocomplete {
