HUE-6077 [frontend] Put session-config css cross version

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -188,3 +188,44 @@ input[type='password']::-ms-reveal {
 .card {
   background-color: @cui-white;
 }
+
+.session-config {
+  .session-actions {
+    display: inline-block;
+    font-size: 13px;
+    margin-top: -2px;
+    margin-left: 15px;
+    vertical-align: text-top;
+  }
+  .config-property {
+    display: inline !important;
+  }
+
+  .config-property-available {
+    margin-left: 0 !important;
+    margin-top: 10px;
+  }
+
+  .config-property-add-value {
+    margin-top: -8px !important;
+    margin-bottom: 20px;
+  }
+
+  .config-property-input-small {
+    width: 120px !important;
+  }
+
+  .config-property-input-mini {
+    width: 90px !important;
+  }
+
+  .config-label {
+    text-align: left !important;
+    margin-left: 0 !important;
+  }
+
+  .config-property-remove {
+    float: right;
+    margin-top: 2px !important;
+  }
+}
