HUE-6077 [frontend] Restyle a bit the create button
(cherry picked from commit 9279532a68a11c38936750b8d926531d29e776c5)

--- a/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
@@ -71,6 +71,12 @@
   box-shadow: @left @top 6px 0 rgba(0, 0, 0, 0.18), @left @top 8px 0 rgba(0, 0, 0, 0.13);
 }
 
+.hue-inset-box-shadow {
+  -webkit-box-shadow: inset 1px 0 0 rgba(255,255,255,.125)!important;
+  -moz-box-shadow: inset 1px 0 0 rgba(255,255,255,.125)!important;
+  box-shadow: inset 1px 0 0 rgba(255,255,255,.125)!important;
+}
+
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
