--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -101,6 +101,12 @@ body {
 .hue-main-create-btn {
   padding-left: 26px;
   padding-right: 26px;
+  border-bottom-color: @hue-primary-color-dark;
+}
+
+.hue-main-create-btn-dropdown {
+  border-bottom-color: @hue-primary-color-dark;
+  .hue-inset-box-shadow;
 }
 
 .jobs-panel {
