HUE-6077 [frontend] Style the file browser breadcrumbs
(cherry picked from commit a0477b065a82b4f0fe38d3cc9ba2fcb5edeaf8c2)

--- a/apps/filebrowser/src/filebrowser/static/filebrowser/less/listdir_components.less
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/less/listdir_components.less
@@ -247,6 +247,7 @@
   font-size: 1.25em;
   margin-left: 25px;
   margin-top: 6px;
+  margin-bottom: 3px;
   padding-left: 14px;
   border-radius: 2px;
   border: 1px solid #EEE;
