--- a/desktop/core/src/desktop/static/desktop/less/components/hue-breadcrumbs.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-breadcrumbs.less
@@ -17,6 +17,7 @@
 */
 
 .hue-breadcrumbs {
+  font-size: 18px;
   list-style: none outside none;
   padding: 9px 9px;
   li {
@@ -38,5 +39,15 @@
   }
   & > li:last-child > span {
     display: none;
+  }
+}
+
+.hue-breadcrumbs-bar {
+  padding: 8px 15px;
+  margin: 0 0 20px;
+  list-style: none;
+  .breadcrumb-link {
+    line-height: 21px;
+    font-size: 18px;
   }
 }
