--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -233,3 +233,7 @@ input[type='password']::-ms-reveal {
 .inline {
   display: inline;
 }
+
+.sidebar-nav .nav-list > li > a {
+  padding: 9px 18px;
+}
