HUE-6077 [frontend] Fix breadcrumbs for Metastore and remove CSS leak
(cherry picked from commit b9a6e1befca55a67d2e3c0261b435bc325fc568e)

--- a/apps/metastore/src/metastore/static/metastore/less/metastore.less
+++ b/apps/metastore/src/metastore/static/metastore/less/metastore.less
@@ -17,26 +17,9 @@
 */
 
 @import (reference) "hue-mixins.less";
-@import (reference) "hue-mixins.less";
-
-.hue-breadcrumbs-bar {
-  padding: 0;
-}
-
-.hue-breadcrumbs-bar li {
-  padding: 12px;
-}
-
-.hue-breadcrumbs-bar li:first-child {
-  padding-left: 0;
-}
-
-.hue-breadcrumbs-bar a {
-  color: @hue-primary-color-dark !important;
-  display: inline !important;
-}
 
 .divider {
+  padding-left: 12px;
   color: #CCC;
 }
 
@@ -145,17 +128,16 @@ h2.card-heading {
 }
 
 .editable-breadcrumb-input input {
-  font-size: 22.75px;
-  height: 36px;
+  font-size: 24px;
   margin: 0;
-  margin-top: 3px;
+  margin-top: 1px;
   padding-left: 11px;
   border-radius: 2px;
   border: 1px solid #EEE;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .acl-panel {
