HUE-6077 [frontend] Fix metastore scrollable issues on Hue 4

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -39,6 +39,10 @@ input[type='password']::-ms-reveal {
   display: none;
 }
 
+*::-ms-clear {
+  display: none;
+}
+
 .app-header {
   font-size: 20px;
   padding-top: 13px;
@@ -236,4 +240,22 @@ input[type='password']::-ms-reveal {
 
 .sidebar-nav .nav-list > li > a {
   padding: 9px 18px;
+}
+
+.dockable {
+  background-color: #FFF;
+  z-index: 1000;
+  padding-bottom: 2px;
+}
+
+.pointer {
+ cursor: pointer!important;
+}
+
+.actionbar-creation {
+  margin: 0;
+}
+
+.actionbar-actions {
+  margin: 0px 0px 10px 0px;
 }
