HUE-6077 [frontend] Move the jHueAutocomplete CSS to a LESS component
(cherry picked from commit 95c07d0a7d9f33075e5b64241096688e070cd1eb)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -33,6 +33,7 @@
 @import "components/hue-query-builder.less";
 @import "components/hue-qq-upload.less";
 @import "components/hue-breadcrumbs.less";
+@import "components/hue-inputautocomplete.less";
 @import "hue-helpers.less";
 
 input[type='password']::-ms-reveal {
